
  - Added 'operator' attribute to CMFTopic.ListCriterion, to permit
    specifying an operator ('and', for the most part) for indexes which
    support it, e.g., KeywordIndex (Tracker #442).

  - Added ZMI interface for editing Link URL (Tracker #364).

  - (__future__) Added DCWorkflow (through-the-web configurable
      workflows) to the core set of CMF products.

Bugs Fixed

  - Fixed ActionsTool so that duplicate actions are stripped.

  - Caused CMFDefault Portal constructor to strip passed-in id
    before creating a portal object with that id.

  - Allowed the ActionsTool to gracefully handle objects
    which return ActionInformation objects. Thanks to 
    Andy Dawkins for the analysis. (Tracker #457)

  - Made workflow Expressions use the correct ModuleImporter
    so that they operate correctly in their restricted 
    environment. Thanks to Dieter Maurer for the patch.
    (Tracker 463)

  - Fixed incorrent permissions in "pending" state of default 
    DCWorkflows. Thanks for Lynn Walton for the report and 
    Florent Guillaume for the patch. (Tracker #464)

  - Fixed missing comma that affected manager permission to modify
    in the published state. Thanks to Florent Guillaume for the 
    patch (Tracker #459)

  - html_quote'd errors raised by FSPageTemplates. Thanks to 
    Dieter Maurer for the patch. (Tracker #462)

  - Fixed typo in zpt_stylesheet.css. Thanks to Florent Guillaume
    for the patch. (Tracker #461)

  - Fixed long standing bug in FSPythonScript where get_size returned
    the incorrect length. This broke editing using EMACS via FTP or
    WebDAV. Thanks to John Glavin at South River Technologies for
    help finding the bug.

  - Reworked functionality added in Tracker #409 which broke the 
    Types Tool. (Tracker #458)

  - Fixed bug whereby DirectoryView instances were not noticing
    some of the changes they should when Zope was running in debug mode
    on Windows (Tracker #305)
